<resources>
    <string name="app_name">Arihant</string>
    <string name="show_pwd">Show Password</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="not_a_member_register">Not a member ? Register</string>
    <string name="copyright">Copyright @2018 All right reserved</string>
    <string name="logo">logo</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="dob">DOB</string>
    <string name="contact_no">Contact No</string>
    <string name="i_accept_all_terms_and_conditions">I accept all terms and conditions</string>
    <string name="register">Register</string>
    <string name="already_a_member_login">Already A Member ? Login</string>
    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>
    <string name="title_location_permission">Allow Permission</string>
    <string name="text_location_permission">allow to access</string>
    <string name="ok">OK</string>
    <string name="password_reset">Password Reset</string>
    <string name="get_reset_link">Get Reset Link</string>
    <string name="contact_form">Contact Form</string>
    <string name="youAreNotUpdatedTitle">Update Available</string>
    <string name="youAreNotUpdatedMessage">A new version of Arihant Online is available. Please update to version\s</string>
    <string name="youAreNotUpdatedMessage1">\s now</string>
    <string name="update">Update</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_course">CourseActivity</string>
</resources>
